<resources>
    <string name="app_name">ECommerce</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="shopping_cart">Shopping Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="categories">Categories</string>
    <string name="category_image">Category Image</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="dollar">$</string>
    <string name="product_description">Product Description</string>
    <string name="hundred">100</string>
    <string name="product_image">Product Image</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="product_name">Product Name</string>
    <string name="delete">Delete</string>
    <string name="cart_image">Cart Image</string>
    <string name="items">items</string>
    <string name="item">item</string>
    <string name="enter_your_information">Enter your Information</string>
    <string name="first_name">First Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="last_name">Last Name</string>
    <string name="item_name">Item</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="shipping">Shipping</string>
    <string name="total_price">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="standard_shipping">Standard Shipping</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="dollar_hundred">$ 100</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="this_is_the_name_of_the_product">This is the name of the Product</string>
    <string name="usa">USA</string>
    <string name="mobile">3456257465</string>
    <string name="this_is_the_deliver_address">This is the deliver address</string>
    <string name="placed">Placed</string>
    <string name="date">08-08-2019 12:45</string>
    <string name="order_id">Order ID:</string>
    <string name="order_total">Order Total:</string>
    <string name="order_date">Order Date:</string>
    <string name="order_history">Order History</string>
    <string name="quantity">Quantity: </string>

    <string-array name="spinner_item">
        <item>Size</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
</resources>
