<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shopping_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/shopping_cart" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/order_history"/>

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_log_out_new_black_24dp"
                android:title="@string/log_out" />

        </menu>
    </item>

</menu>
