<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_marginTop="2dp"
    android:layout_height="200dp"
    android:elevation="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/product_image"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/product_image" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:id="@+id/product_name"
                    android:text="@string/product_name"
                    android:layout_toEndOf="@+id/product_image"
                    android:textStyle="bold"/>

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.3"
                    android:textSize="15sp"
                    android:id="@+id/product_description"
                    android:text="@string/product_description"
                android:layout_toEndOf="@+id/product_image"
                    android:layout_below="@+id/product_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/product_image"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/dollar"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hundred"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


